--- a/manifest.json
+++ b/manifest.json
@@ -57,10 +57,12 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "wxcf446a6868a19b8b",
+        "appid" : "wxc6921833a3bb5f17",
         "setting" : {
-            "urlCheck" : false,
-            "postcss" : true
+            "urlCheck" : true,
+            "postcss" : true,
+            "es6" : true,
+            "minified" : true
         },
         "usingComponents" : true
     },
